demo/k8s/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-svc
  namespace: ns-example
  labels:
    app: demo-app
spec:
  selector:
    app: demo-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
