demo/k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-svc-np
  namespace: ns-example
  labels:
    app: demo-app
spec:
  selector:
    app: demo-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 32080
      protocol: TCP
  type: NodePort
